<resources>
    <string name="app_name">MyScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="schedule_list_fragment_label">一覧表示</string>
    <string name="schedule_calendar_fragment_label">カレンダー表示</string>
    <string name="schedule_edit_fragment_label">スケジュール登録・更新</string>
    <string name="to_calendar">カレンダーへ</string>
    <string name="previous">戻る</string>
    <string name="date">日付</string>
    <string name="time">時間</string>
    <string name="title">タイトル</string>
    <string name="title_content">文字を消して空欄にする</string>
    <string name="detail">詳細</string>
    <string name="dateSelect">日付選択</string>
    <string name="timeSelect">時間選択</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>
    <string name="added">追加しました</string>
    <string name="fixed">修正しました</string>
    <string name="deleted">削除しました</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>