<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ScheduleListFragment">

    <fragment
        android:id="@+id/ScheduleListFragment"
        android:name="com.example.myscheduler.fragment.ScheduleListFragment"
        android:label="@string/schedule_list_fragment_label"
        tools:layout="@layout/fragment_schedule_list">

        <action
            android:id="@+id/action_ScheduleListFragment_to_ScheduleCalenderFragment"
            app:destination="@id/ScheduleCalendarFragment" />
        <action
            android:id="@+id/action_ScheduleListFragment_to_ScheduleEditFragment"
            app:destination="@id/ScheduleEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/ScheduleCalendarFragment"
        android:name="com.example.myscheduler.fragment.ScheduleCalendarFragment"
        android:label="@string/schedule_calendar_fragment_label"
        tools:layout="@layout/fragment_schedule_calendar">

        <action
            android:id="@+id/action_ScheduleCalenderFragment_to_ScheduleListFragment"
            app:destination="@id/ScheduleListFragment" />
        <action
            android:id="@+id/action_ScheduleCalenderFragment_to_ScheduleEditFragment"
            app:destination="@id/ScheduleEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/ScheduleEditFragment"
        android:name="com.example.myscheduler.fragment.ScheduleEditFragment"
        android:label="@string/schedule_edit_fragment_label"
        tools:layout="@layout/fragment_schedule_edit">

        <argument
            android:name="scheduleId"
            app:argType="long"
            android:defaultValue="-1L"/>
    </fragment>
</navigation>